--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: AndyCao wants to ba a muscle man
+title: AndyCao is Batman
 SEOTitle: AndyCao | BY Blog
 header-img: img/post-bg-desk.jpg
 email: caoxin@pku.edu.cn
