--- a/_config.yml
+++ b/_config.yml
@@ -16,15 +16,6 @@ sidebar-avatar: /img/IMG_20190513_153345.jpg      # use absolute URL, seeing it'
 
 
 
-# SNS settings
-RSS: false
-# weibo_username:     qiubaiying
-#zhihu_username:     qiubaiying
-#github_username:    caoxin9527
-#facebook_username:  baiying.qiu.7
-#jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
-
 
 
 
@@ -57,7 +48,7 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-# disqus_username: qiubaiying
+# disqus_username: AndyCao
 
 # Gitalk
 gitalk:
